--- a/code/app/templates/login.html
+++ b/code/app/templates/login.html
@@ -5,6 +5,10 @@
     <link href="{% static 'css/login.css' %}" rel="stylesheet">
 {% endblock css %}
 
+{% block title %}
+    Simple Email: Login
+{% endblock title %}
+
 {% block body %}
   <body class="text-center">
     <form class="form-signin" method="post">
