More registration form stuff

--- a/code/app/templates/register.html
+++ b/code/app/templates/register.html
@@ -20,7 +20,7 @@
 
       <div class="form-group align-left">
         <label for="{{ form.username.id_for_label }}" class="">Username</label>
-        <input id="{{ form.usernam.id_for_label }}" class="form-control" placeholder="Username" required="" autofocus="">
+        <input id="{{ form.username.id_for_label }}" class="form-control" placeholder="Username" required="" autofocus="">
       </div>
 
       <div class="form-group align-left">
