--- a/code/app/templates/register.html
+++ b/code/app/templates/register.html
@@ -20,17 +20,17 @@
 
       <div class="form-group align-left">
         <label for="{{ form.username.id_for_label }}" class="">Username</label>
-        <input id="{{ form.username.id_for_label }}" class="form-control" placeholder="Username" required="" autofocus="">
+        <input name="{{ form.username.html_name }}" class="form-control" placeholder="Username" required="" autofocus="">
       </div>
 
       <div class="form-group align-left">
-        <label for="{{ form.password1.id_for_label }}" class="">Password</label>
-        <input name="{{ form.password1.html_name }}" type="password" id="{{ form.password1.id_for_label }}" class="form-control" placeholder="Password" required="">
+        <label for="{{ form.password.id_for_label }}" class="">Password</label>
+        <input name="{{ form.password.html_name }}" type="password" id="{{ form.password.id_for_label }}" class="form-control" placeholder="Password" required="">
       </div>
 
       <div class="form-group align-left">
-        <label for="{{ form.password2.id_for_label }}" class="">Confirm Password</label>
-        <input name="{{ form.password2.html_name }}" type="password" id="{{ form.password2.id_for_label }}" class="form-control" placeholder="Confrim Password" required="">
+        <label for="{{ form.re_password.id_for_label }}" class="">Confirm Password</label>
+        <input name="{{ form.re_password.html_name }}" type="password" id="{{ form.re_password.id_for_label }}" class="form-control" placeholder="Confrim Password" required="">
       </div>
 
       <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
