--- a/code/app/templates/nav.html
+++ b/code/app/templates/nav.html
@@ -11,7 +11,7 @@
         <!-- Navbar -->
         {% block navbar %}
             <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-              <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="#">Simple Email</a>
+              <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="/">Simple Email</a>
               <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-toggle="collapse" data-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -34,7 +34,7 @@
                         <ul class="nav flex-column">
 
                           <div class="compose-button ml-3 mr-3">
-                            <button type="button" class="btn btn-block btn-outline-secondary">Compose</button>
+                            <a href="/compose" role="button" class="btn btn-block btn-outline-secondary">Compose</a>
                           </div>
 
                           <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
