--- a/code/app/static/css/login.css
+++ b/code/app/static/css/login.css
@@ -10,7 +10,9 @@ body {
   align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #f5f5f5;
+  background-color: #000000;
+  color: #FFFFFF;
+
 }
 
 .form-signin {
