--- a/code/app/templates/base.html
+++ b/code/app/templates/base.html
@@ -14,7 +14,12 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/alertify/alertify.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/alertify/themes/bootstrap.css' %}">
-    {% block css %}{% endblock css %}
+
+    {% block css %}
+        {{ block.super }}
+        <link href="{% static 'css/base.css' %}" rel="stylesheet">
+    {% endblock css %}
+
 
     <!-- Javascript -->
     <script type="text/javascript" src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
