Fixed wonky urls; added support for outbox
- Fixed some weird behaviors with URLs. Users can no longer go to
  pages that don't exist. Fixed this by separating each folder into
  their own views, instead of taking URl arguments.
- Users can now view their outbox (sent emails)

--- a/code/app/templates/nav.html
+++ b/code/app/templates/nav.html
@@ -58,7 +58,7 @@
                           </li>
                           <li class="nav-item">
                             <a class="nav-link {% if folder == 'outbox' %}active{% endif %}" href="/outbox">
-                              <span data-feather="starred"></span>
+                              <span data-feather="outbox"></span>
                               Outbox
                             </a>
                           </li>
