Finished up search functionality
- Fixed some problems with search since the last push
- Added an additional search unit test for testing the format
  of returned results

--- a/code/app/templates/search.html
+++ b/code/app/templates/search.html
@@ -17,7 +17,7 @@
               <th>From</th>
               <th>To</th>
             </tr>
-          {% for email in emails %}
+          {% for uid, email in emails.items %}
             <tr>
               <td><a href="/">{{ email.subject }}</a></td>
               <td>{{ email.from }}</td>
