--- a/code/app/static/css/nav.css
+++ b/code/app/static/css/nav.css
@@ -1,5 +1,6 @@
 body {
   font-size: .875rem;
+  background-color: #000000;
 }
 
 .feather {
@@ -46,7 +47,7 @@ body {
 
 .sidebar .nav-link {
   font-weight: 500;
-  color: #333;
+  color: #ffffff;
 }
 
 .sidebar .nav-link .feather {
