--- a/code/app/templates/compose.html
+++ b/code/app/templates/compose.html
@@ -40,7 +40,7 @@
 {% endblock javascript %}
 
 {% block header %}
-    <h1 class="h2">Compose</h1>
+    <h1 class="h2 text-color">Compose</h1>
     <div class="btn-toolbar mb-2 mb-md-0">
         <div class="btn-group mr-2">
             <button type="button" class="btn btn-sm btn-outline-danger" onclick="display_modal()">Discard</button>
@@ -53,7 +53,7 @@
 {% block view %}
     <div>
 
-        <form id="compose-form" action="/compose" method="post">
+        <form id="compose-form" action="/compose" method="post" class=" text-color ">
             {% csrf_token %}
             {{ form.sender.label }}
             <br>
