--- a/code/app/templates/nav.html
+++ b/code/app/templates/nav.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block css %}
+    {{ block.super }}
     <link rel="stylesheet" type="text/css" href="{% static 'css/nav.css' %}">
 {% endblock css %}
 
@@ -37,17 +38,17 @@
 
                 <!-- Sidebar -->
                 {% block sidebar %}
-                    <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
+                    <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block sidebar collapse dark-fade ">
                       <div class="sidebar-sticky pt-3">
                         <ul class="nav flex-column">
 
                           <div class="compose-button ml-3 mr-3">
-                            <a href="/compose" role="button" class="btn btn-block btn-outline-secondary">Compose</a>
+                            <a href="/compose" role="button" class="btn btn-lg btn-primary btn-color ">Compose</a>
                           </div>
 
-                          <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+                          <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-color">
                             <span>Folders</span>
-                            <a class="d-flex align-items-center text-muted" href="#" aria-label="Add a new report">
+                            <a class="d-flex align-items-center text-color" href="#" aria-label="Add a new report">
                               <span data-feather="plus-circle"></span>
                             </a>
                           </h6>
@@ -77,6 +78,7 @@
                             </a>
                           </li>
                         </ul>
+
                       </div>
                     </nav>
                 {% endblock sidebar %}
