--- a/code/app/templates/register.html
+++ b/code/app/templates/register.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block css %}
+    {{ block.super }}
     <link href="{% static 'css/register.css' %}" rel="stylesheet">
 {% endblock css %}
 
@@ -16,24 +17,24 @@
 
       {#<img class="mb-4" src="Signin%20Template%20%C2%B7%20Bootstrap_files/bootstrap-solid.svg" alt="" width="72" height="72">#}
 
-      <h1 class="h3 mb-4 font-weight-normal">Register</h1>
+      <h1 class="h3 mb-4 font-weight-normal text-color">Register</h1>
 
-      <div class="form-group align-left">
+      <div class="form-group align-left text-color">
         <label for="{{ form.username.id_for_label }}" class="">Username</label>
         <input name="{{ form.username.html_name }}" class="form-control" placeholder="Username" required="" autofocus="">
       </div>
 
-      <div class="form-group align-left">
+      <div class="form-group align-left text-color">
         <label for="{{ form.password.id_for_label }}" class="">Password</label>
         <input name="{{ form.password.html_name }}" type="password" id="{{ form.password.id_for_label }}" class="form-control" placeholder="Password" required="">
       </div>
 
-      <div class="form-group align-left">
+      <div class="form-group align-left text-color">
         <label for="{{ form.re_password.id_for_label }}" class="">Confirm Password</label>
         <input name="{{ form.re_password.html_name }}" type="password" id="{{ form.re_password.id_for_label }}" class="form-control" placeholder="Confrim Password" required="">
       </div>
 
-      <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
+      <button class="btn btn-lg btn-primary btn-block btn-color" type="submit">Register</button>
 
       <p class="mt-2 text-muted">Already have an account? Login <a href="/login">here</a>.</p>
 
