--- a/code/app/templates/email_login.html
+++ b/code/app/templates/email_login.html
@@ -17,10 +17,10 @@
 
       {#<img class="mb-4" src="Signin%20Template%20%C2%B7%20Bootstrap_files/bootstrap-solid.svg" alt="" width="72" height="72">#}
 
-      <h1 class="h3 mb-4 font-weight-normal">Welcome to Simple</h1>
+      <h1 class="h3 mb-4 font-weight-normal">Simple Email</h1>
 
-      <label for="inputUsername" class="sr-only">Username</label>
-      <input name="username" id="inputUsername" class="form-control" placeholder="Username" required="" autofocus="">
+      <label for="inputEmail" class="sr-only">Email</label>
+      <input name="email" id="inputEmail" class="form-control" placeholder="Email" required="" autofocus="">
       <label for="inputPassword" class="sr-only">Password</label>
       <input name="password" type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
 
