--- a/code/app/templates/nav.html
+++ b/code/app/templates/nav.html
@@ -24,7 +24,7 @@
                     {{ user.username }}
                   </button>
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="/logout">Logout</a>
+                    <a class="dropdown-item" href="/email_logout">Email Logout</a>
                     {% if user.is_staff %}
                       <a class="dropdown-item" href="/admin">Admin</a>
                     {% endif %}
