--- a/code/app/templates/splash.html
+++ b/code/app/templates/splash.html
@@ -1,30 +1,17 @@
-{% load static %}
+{% extends 'base.html' %}
 
-<!DOCTYPE html>
-<html lang="en">
+{% block title %}
+    Simple: App Selection
+{% endblock title %}
 
-<head>
-    <!-- Meta -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
-
-    <!-- Javascript -->
-    <script type="text/javascript" src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-
-    <!-- Title -->
-    <title>Simple: App Selection</title>
-</head>
-
+{% block body %}
 <body>
 
     <ul class="list-group">
         <li class="list-group-item-action"><a href="/notes">SimpleNotes</a></li>
-        <li class="list-group-item-action"><a href="/inbox">SimpleEmail</a></li>
+        <li class="list-group-item-action"><a href="/email_login">SimpleEmail</a></li>
+        <li class="list-group-item-action"><a href="/logout">Master Logout</a></li>
     </ul>
 
 </body>
-
-</html>
+{% endblock body %}
