--- a/code/app/templates/login.html
+++ b/code/app/templates/login.html
@@ -17,7 +17,7 @@
 
       {#<img class="mb-4" src="Signin%20Template%20%C2%B7%20Bootstrap_files/bootstrap-solid.svg" alt="" width="72" height="72">#}
 
-      <h1 class="h3 mb-4 font-weight-normal">Welcome to Simple</h1>
+      <h1 class="h3 mb-4 font-weight-normal">Welcome to Simple Apps</h1>
 
       <label for="inputUsername" class="sr-only">Username</label>
       <input name="username" id="inputUsername" class="form-control" placeholder="Username" required="" autofocus="">
