--- a/code/app/templates/notes_inbox.html
+++ b/code/app/templates/notes_inbox.html
@@ -1,19 +1,11 @@
-{% extends "nav.html" %}
+{% extends "notes_nav.html" %}
 
 {% block title %}
-    {% if folder == 'inbox' %}
-        Simple Notes: Inbox
-    {% endif %}
+    Simple Notes: Notesbox
 {% endblock title %}
 
 {% block header %}
-
-    {% if folder == 'inbox' %}
-        <h1 class="h2 text-color">Inbox</h1>
-    {% elif folder == 'outbox' %}
-        <h1 class="h2 text-color">Outbox</h1>
-    {% endif %}
-
+    <h1 class="h2 text-color">Notebox</h1>
 {% endblock header %}
 
 {% block view %}
@@ -21,15 +13,11 @@
         <table class="table table-striped table-sm text-color">
           <tbody>
             <tr>
-              <th>Subject</th>
-              <th>From</th>
-              <th>To</th>
+              <th>Title</th>
             </tr>
-          {% for email in emails %}
+          {% for note in notes %}
             <tr>
-              <td><a href="/view/{{ email.uid }}">{{ email.subject }}</a></td>
-              <td>{{ email.from }}</td>
-              <td>{{ email.to }}</td>
+              <td><a href="/view_note/{{ note.uid }}">{{ note.title }}</a></td>
             </tr>
           {% endfor %}
           </tbody>
