--- a/code/app/templates/notes_nav.html
+++ b/code/app/templates/notes_nav.html
@@ -12,7 +12,7 @@
         <!-- Navbar -->
         {% block navbar %}
             <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-              <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="/">Simple Email</a>
+              <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="/">Simple Notes</a>
               <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-toggle="collapse" data-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -43,20 +43,13 @@
                         <ul class="nav flex-column">
 
                           <div class="compose-button ml-3 mr-3">
-                            <a href="/compose" role="button" class="btn btn-lg btn-primary btn-color ">Compose</a>
+                            <a href="/note_compose" role="button" class="btn btn-lg btn-primary btn-color ">New Note</a>
                           </div>
 
-                          <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-color">
-                            <span>Folders</span>
-                            <a class="d-flex align-items-center text-color" href="#" aria-label="Add a new report">
-                              <span data-feather="plus-circle"></span>
-                            </a>
-                          </h6>
-
                           <li class="nav-item">
-                            <a class="nav-link {% if folder == 'inbox' %}active{% endif %}" href="/">
-                              <span data-feather="inbox"></span>
-                              Inbox
+                            <a class="nav-link " href="/">
+                              <span data-feather="Notebox"></span>
+                              Notebox
                             </a>
                           </li>
 
