--- a/code/app/templates/notes_compose.html
+++ b/code/app/templates/notes_compose.html
@@ -17,7 +17,7 @@
     <script src="https://cdn.tiny.cloud/1/atcv4hj8bhdb3vq7uxn51n7l6fj8qom8div5jxfemgp9h2dm/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
     <script>
       tinymce.init({
-        selector: '#compose_body',
+        selector: '#note-body',
           toolbar: 'undo redo | fontselect| fontsizeselect | bold italic | alignleft aligncenter alignright alignjustify | ' +
               'bullist numlist outdent indent | link image | print preview media fullpage | ',
           skin: 'oxide-dark',
@@ -46,7 +46,7 @@
     <div class="btn-toolbar mb-2 mb-md-0">
         <div class="btn-group mr-2">
             <button type="button" class="btn btn-sm btn-outline-danger" onclick="display_modal()">Discard</button>
-            <button type="submit" form="compose-form" class="btn btn-sm btn-outline-primary">Save</button>
+            <button type="submit" form="note-form" class="btn btn-sm btn-outline-primary">Save</button>
         </div>
     </div>
 {% endblock header %}
@@ -63,6 +63,7 @@
             <textarea id="note-body" name="{{ form.body.html_name }}"
             rows="30" cols="33" style = 'background-color: black'>
             </textarea>
+            <input name="{{ form.user.html_name }}" id="{{ form.user.id_for_label }}" required hidden value="{{ form.user.value }}">
 
         </form>
     </div>
