--- a/code/app/templates/notes_nav.html
+++ b/code/app/templates/notes_nav.html
@@ -47,7 +47,7 @@
                           </div>
 
                           <li class="nav-item">
-                            <a class="nav-link " href="/">
+                            <a class="nav-link " href="/note_box">
                               <span data-feather="Notebox"></span>
                               Notebox
                             </a>
