--- a/code/app/templates/splash.html
+++ b/code/app/templates/splash.html
@@ -8,7 +8,7 @@
 <body>
 
     <ul class="list-group">
-        <li class="list-group-item-action"><a href="/notes">SimpleNotes</a></li>
+        <li class="list-group-item-action"><a href="/note_box">SimpleNotes</a></li>
         <li class="list-group-item-action"><a href="/email_login">SimpleEmail</a></li>
         <li class="list-group-item-action"><a href="/logout">Master Logout</a></li>
     </ul>
