--- a/code/app/templates/email_login.html
+++ b/code/app/templates/email_login.html
@@ -33,7 +33,7 @@
 
       <button class="btn btn-lg btn-primary btn-block btn-color" type="submit">Sign in</button>
 
-      <p class="mt-2 mb-3 text-muted">Forgot password? <a href="/reset_password">Reset</a> here!</p>
+{#      <p class="mt-2 mb-3 text-muted">Forgot password? <a href="/reset_password">Reset</a> here!</p>#}
 
     </form>
   </body>
