--- a/code/app/templates/nav.html
+++ b/code/app/templates/nav.html
@@ -27,6 +27,8 @@
                     <a class="dropdown-item" href="/email_logout">Email Logout</a>
                     {% if user.is_staff %}
                       <a class="dropdown-item" href="/admin">Admin</a>
+                    {% else %}
+                      <a class="dropdown-item" href="/reset_password">Reset Password</a>
                     {% endif %}
                   </div>
                 </div>
